--- a/SPEProjectV2/app/src/debug/res/values/google_maps_api.xml
+++ b/SPEProjectV2/app/src/debug/res/values/google_maps_api.xml
@@ -15,5 +15,10 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
+    <!-- Mike's Key -->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDfJe1dHLMPJyDv0Drr-ztB7UyOfEp3TxQ</string>
+    <!-- Stefan's Key
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAI5KTQLa87XC7_XSMpk9SiUdAEuOy093o</string>
+    -->
+
 </resources>
