--- a/SPEProjectV2/app/src/main/res/layout/activity_maps.xml
+++ b/SPEProjectV2/app/src/main/res/layout/activity_maps.xml
@@ -12,6 +12,7 @@
     tools:context="com.example.stefan.speproject1.MapsActivity" />
 
 <android.support.design.widget.FloatingActionButton
+    android:id="@+id/cam_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom|end"
