Basic GPS button working. Fails if user is not connected to internet or issue with multiple icons appearing on map

--- a/android/app/src/main/res/layout/activity_maps.xml
+++ b/android/app/src/main/res/layout/activity_maps.xml
@@ -20,7 +20,8 @@
         android:layout_marginBottom="100dp"
         android:scaleX="1.2"
         android:scaleY="1.2"
-        android:src="@drawable/target_icon"/>
+        android:src="@drawable/target_icon"
+        android:onClick="currentLocation"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/cam_button"
