--- a/android/app/src/main/res/layout/activity_dataview.xml
+++ b/android/app/src/main/res/layout/activity_dataview.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/spdatafragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -9,7 +10,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.bitbusters.android.speproject.MapsActivity" />
+        tools:context="com.bitbusters.android.speproject.DataViewActivity" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/gps_button"
