--- a/android/app/src/main/res/layout/activity_dataview.xml
+++ b/android/app/src/main/res/layout/activity_dataview.xml
@@ -1,5 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/spdatafragment_container"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -18,9 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="100dp"
-        android:scaleX="1.2"
-        android:scaleY="1.2"
+        android:layout_marginBottom="90dp"
         android:src="@drawable/target_icon"
         android:onClick="currentLocation"/>
 
@@ -31,7 +29,6 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:scaleX="1.2"
-        android:scaleY="1.2"
         android:src="@drawable/photo_icon"/>
+
 </FrameLayout>
