--- a/android/app/src/main/res/layout/fragment_spdataview.xml
+++ b/android/app/src/main/res/layout/fragment_spdataview.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:weightSum="1" >
+              android:layout_height="match_parent" >
 
     <TextView
         android:text="Sample Point Data"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/textView"
         android:textSize="24sp"
         android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
-        android:layout_weight="0.30" />
+        android:layout_weight="0.70" />
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
                 android:id="@+id/back_button"
                 android:clickable="true"
                 android:scaleType="fitCenter"
-                android:layout_weight = "1"
+                android:layout_weight="1"
                 android:src="@drawable/back_white" />
 
             <ImageButton
@@ -46,7 +46,7 @@
                 android:id="@+id/mapview_button"
                 android:clickable="true"
                 android:scaleType="fitCenter"
-                android:layout_weight = "1"
+                android:layout_weight="1"
                 android:src="@drawable/marker_white" />
 
             <ImageButton
@@ -56,12 +56,24 @@
                 android:id="@+id/gridview_button"
                 android:clickable="true"
                 android:scaleType="fitCenter"
-                android:layout_weight = "1"
+                android:layout_weight="1"
                 android:src="@drawable/grid_white" />
 
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
 
+    <GridView
+        android:id="@+id/grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnWidth="100dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"
+        android:stretchMode="spacingWidthUniform"
+        android:background="@color/colorAccent"
+        android:layout_weight="0.3"
+        />
 
 </LinearLayout>
