--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#85d3a4</color>
+    <color name="colorAccent">#ffffff</color>
     <color name="orange">#ff4d00</color>
     <color name="black">#000000</color>
 </resources>
