added ability to click on a photo and view in full screen with tag and comments

--- a/android/app/src/main/res/layout/fragment_spdataview.xml
+++ b/android/app/src/main/res/layout/fragment_spdataview.xml
@@ -9,6 +9,7 @@
         android:text="Sample Point Data"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
         android:id="@+id/textView"
         android:textSize="24sp"
         android:background="#cc4fc3f7"
