--- a/android/app/src/main/res/layout/fragment_photoview.xml
+++ b/android/app/src/main/res/layout/fragment_photoview.xml
@@ -3,12 +3,12 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/black" >
+              android:clickable="true" >
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#CC000000"
+        android:background="#FF000000"
         android:theme="?attr/actionBarTheme"
         android:id="@+id/photoview_toolbar"
         android:minHeight="?attr/actionBarSize"
@@ -39,6 +39,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#DD000000"
         android:layout_weight="0.40">
 
         <ImageView
@@ -48,33 +49,41 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/cast_expanded_controller_progress_text_color"
+        android:fillViewport="true"
         android:layout_weight="0.60" >
 
-        <TextView
-            android:id="@+id/photo_tag"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:gravity="start"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1.0"
+            android:background="#cc4fc3f7" >
 
-        <TextView
-            android:id="@+id/photo_comment"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:gravity="start"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"/>
+            <TextView
+                android:id="@+id/photo_tag"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:gravity="start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp" />
 
-    </LinearLayout>
-    
+            <TextView
+                android:id="@+id/photo_comment"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:gravity="start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"/>
+
+        </LinearLayout>
+
+    </ScrollView>
+
 </LinearLayout>
