--- a/android/app/src/main/res/layout/fragment_spdataview.xml
+++ b/android/app/src/main/res/layout/fragment_spdataview.xml
@@ -1,21 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent" >
 
-    <TextView
-        android:text="Sample Point Data"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:clickable="true"
-        android:id="@+id/textView"
-        android:textSize="24sp"
         android:background="#cc4fc3f7"
-        android:layout_weight="0.70"
-        android:textColor="@color/black"
-        android:textAlignment="center"/>
+        android:layout_weight="0.70" >
+
+        <TextView
+            android:text="Bristol Waterfront"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/sp_name"
+            android:textSize="24sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:text="Sample Date: 13-Nov-15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:id="@+id/sp_data1"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_gravity="start"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp" />
+
+        <TextView
+            android:text="pH: 7.93"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:id="@+id/sp_data2"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_gravity="start"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp" />
+
+    </LinearLayout>
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -23,17 +55,14 @@
         android:background="#CC000000"
         android:theme="?attr/actionBarTheme"
         android:id="@+id/dataview_toolbar"
-        android:minHeight="?attr/actionBarSize"
-        android:weightSum="1">
+        android:minHeight="?attr/actionBarSize">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="?attr/actionBarSize"
             android:orientation="horizontal"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="0.5"
-            >
+            android:layout_marginRight="16dp" >
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -43,8 +72,7 @@
                 android:clickable="true"
                 android:scaleType="center"
                 android:padding="16dp"
-                android:src="@drawable/arrow_white"
-                android:layout_weight="1"/>
+                android:src="@drawable/arrow_white" />
 
         </LinearLayout>
 
@@ -61,7 +89,6 @@
                 android:id="@+id/mapview_button"
                 android:clickable="true"
                 android:scaleType="center"
-                android:layout_weight="1"
                 android:layout_toLeftOf="@+id/gridview_button"
                 android:padding="16dp"
                 android:src="@drawable/marker_white" />
@@ -73,13 +100,11 @@
                 android:id="@+id/gridview_button"
                 android:clickable="true"
                 android:scaleType="center"
-                android:layout_weight="1"
                 android:layout_alignParentRight="true"
                 android:padding="16dp"
                 android:src="@drawable/grid_white" />
 
         </RelativeLayout>
-
 
     </android.support.v7.widget.Toolbar>
 
@@ -88,7 +113,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#AA000000"
-        android:layout_weight="0.3"
-        />
+        android:layout_weight="0.30" />
 
 </LinearLayout>
