--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#85d3a4</color>
     <color name="orange">#ff4d00</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
