--- a/android/app/src/main/res/drawable/splash.xml
+++ b/android/app/src/main/res/drawable/splash.xml
@@ -4,7 +4,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/background"/>
+            android:src="@drawable/background_dark"/>
     </item>
 
     <item>
