--- a/android/app/src/main/res/layout/activity_dataview.xml
+++ b/android/app/src/main/res/layout/activity_dataview.xml
@@ -13,6 +13,15 @@
         tools:context="com.bitbusters.android.speproject.DataViewActivity" />
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/sp_view_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="160dp"
+        android:src="@drawable/target_icon" />
+
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/gps_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
