--- a/android/app/src/main/res/layout/activity_dataview.xml
+++ b/android/app/src/main/res/layout/activity_dataview.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="160dp"
-        android:src="@drawable/target_icon" />
+        android:src="@drawable/marker_white" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/gps_button"
