--- a/android/app/src/main/res/layout/activity_dataview.xml
+++ b/android/app/src/main/res/layout/activity_dataview.xml
@@ -28,7 +28,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="90dp"
-        android:src="@drawable/target_icon"
+        android:src="@drawable/gps_icon"
         android:onClick="currentLocation"/>
 
     <android.support.design.widget.FloatingActionButton
