updated SPDataView formatting. Changed order of server calls to display ratins text first

--- a/android/app/src/main/res/layout/fragment_spdataview.xml
+++ b/android/app/src/main/res/layout/fragment_spdataview.xml
@@ -36,7 +36,7 @@
             android:layout_marginRight="16dp" />
 
         <TextView
-            android:text=""
+            android:text="Loading ratings data..."
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
