--- a/android/app/src/main/res/layout/activity_dataview.xml
+++ b/android/app/src/main/res/layout/activity_dataview.xml
@@ -12,6 +12,13 @@
         android:layout_height="match_parent"
         tools:context="com.bitbusters.android.speproject.DataViewActivity" />
 
+    <ProgressBar
+        android:id="@+id/progressSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity= "center_vertical|center_horizontal"
+        android:visibility="invisible" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/sp_view_button"
         android:layout_width="wrap_content"
