--- a/android/app/src/main/res/layout/activity_dataview.xml
+++ b/android/app/src/main/res/layout/activity_dataview.xml
@@ -19,6 +19,15 @@
         android:layout_gravity= "center_vertical|center_horizontal"
         android:visibility="invisible" />
 
+    <ImageButton
+        android:id="@+id/info_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:src="@drawable/info_white"
+        android:background="@null"
+        android:layout_margin="20dp" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/sp_view_button"
         android:layout_width="wrap_content"
@@ -36,7 +45,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="90dp"
         android:src="@drawable/target_white"
-        android:onClick="currentLocation"/>
+        android:onClick="currentLocation" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/cam_button"
@@ -45,6 +54,6 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/photo_icon"/>
+        android:src="@drawable/photo_icon" />
 
 </FrameLayout>
