--- a/android/app/src/main/res/layout/fragment_infoview.xml
+++ b/android/app/src/main/res/layout/fragment_infoview.xml
@@ -47,14 +47,113 @@
             android:background="#cc4fc3f7" >
 
             <TextView
-                android:id="@+id/info_text"
+                android:id="@+id/info_title"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                android:gravity="start"
+                android:textSize="25sp"
+                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/info_string"
-                android:layout_margin="16dp" />
+                android:text="@string/info_title"
+                android:layout_marginTop="16dp" />
+
+            <TextView
+                android:id="@+id/info_subtitle"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:gravity="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/info_subtitle"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="16dp" />
+
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/info_spvButton"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.80"
+                    android:src="@drawable/marker_white"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="16dp"/>
+
+                <TextView
+                    android:id="@+id/info_spvText"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.20"
+                    android:text="@string/info_spvText"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp" />
+
+             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/info_gpsButton"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.80"
+                    android:src="@drawable/target_white"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="16dp"/>
+
+                <TextView
+                    android:id="@+id/info_gpsText"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.20"
+                    android:text="@string/info_gpsText"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/info_camButton"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.80"
+                    android:src="@drawable/photo_icon"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="16dp"/>
+
+                <TextView
+                    android:id="@+id/info_camText"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.20"
+                    android:text="@string/info_camText"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
