--- a/android/app/src/main/res/layout/fragment_spdataview.xml
+++ b/android/app/src/main/res/layout/fragment_spdataview.xml
@@ -87,10 +87,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="#00000000"
-                android:id="@+id/mapview_button"
+                android:id="@+id/map_view_button"
                 android:clickable="true"
                 android:scaleType="center"
-                android:layout_toLeftOf="@+id/gridview_button"
+                android:layout_toLeftOf="@+id/grid_view_button"
                 android:padding="16dp"
                 android:src="@drawable/marker_white" />
 
@@ -98,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="#00000000"
-                android:id="@+id/gridview_button"
+                android:id="@+id/grid_view_button"
                 android:clickable="true"
                 android:scaleType="center"
                 android:layout_alignParentRight="true"
