--- a/android/app/src/main/res/layout/fragment_photoview.xml
+++ b/android/app/src/main/res/layout/fragment_photoview.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="#00000000"
-                android:id="@+id/back_button"
+                android:id="@+id/back_button_photo_view"
                 android:clickable="true"
                 android:scaleType="center"
                 android:src="@drawable/arrow_white"
