--- a/android/app/src/main/res/layout/fragment_spdataview.xml
+++ b/android/app/src/main/res/layout/fragment_spdataview.xml
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="#00000000"
-                android:id="@+id/back_button"
+                android:id="@+id/back_button_sp_data_view"
                 android:clickable="true"
                 android:scaleType="center"
                 android:padding="16dp"
