--- a/android/app/src/main/res/layout/fragment_photoview.xml
+++ b/android/app/src/main/res/layout/fragment_photoview.xml
@@ -53,16 +53,16 @@
                 android:adjustViewBounds="true"
                 android:src="@drawable/placeholder"/>
 
-            <TextView
-                android:id="@+id/photo_name"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp" />
+            <!--<TextView-->
+                <!--android:id="@+id/photo_name"-->
+                <!--android:textColor="@color/black"-->
+                <!--android:textSize="24sp"-->
+                <!--android:gravity="center"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="8dp"-->
+                <!--android:layout_marginLeft="16dp"-->
+                <!--android:layout_marginRight="16dp" />-->
 
             <TextView
                 android:layout_width="match_parent"
