--- a/android/app/src/main/res/layout/activity_data_view.xml
+++ b/android/app/src/main/res/layout/activity_data_view.xml
@@ -20,42 +20,55 @@
         android:layout_gravity= "center_vertical|center_horizontal"
         android:visibility="invisible" />
 
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/cam_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginTop="90dp"
         android:src="@drawable/photo_icon" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/sp_view_button"
-        android:visibility="invisible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="160dp"
-        android:src="@drawable/marker_white" />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/sp_view_button"-->
+        <!--android:visibility="invisible"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_marginRight="20dp"-->
+        <!--android:layout_marginBottom="160dp"-->
+        <!--android:src="@drawable/marker_white" />-->
 
-    <android.support.design.widget.FloatingActionButton
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/hamburger_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="0dp"-->
+        <!--android:layout_marginTop="0dp"-->
+        <!--android:src="@drawable/ic_menu_white_36dp"-->
+        <!--app:borderWidth="0dp" />-->
+
+    <ImageButton
         android:id="@+id/hamburger_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|left|start"
-        android:layout_marginLeft="0dp"
+        android:contentDescription="@string/button_desc_hamburger"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="0dp"
-        android:src="@drawable/ic_menu_white_36dp"
-        app:borderWidth="0dp" />
+        android:layout_marginStart="0dp"
+        android:src="@drawable/ic_menu_white"
+        app:backgroundTint="@color/colorAccent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/gps_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="90dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="bottom|end"
         android:onClick="currentLocation"
-        android:src="@drawable/target_white" />
+        android:src="@drawable/target_white"/>
+
 </FrameLayout>
