Add Overall Classification, Add onCameraIdleListeners, Update Map Design

--- a/android/app/src/main/res/layout/fragment_cde_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_cde_data_view.xml
@@ -9,7 +9,7 @@
     android:layout_height="166dp"
     android:orientation="vertical"
     android:clickable="true"
-    android:background="#cc4fc3f7">
+    android:background="@color/backgroundTransparent">
 
         <TextView
         android:text=""
