--- a/android/app/src/main/res/layout/fragment_full_photo_view.xml
+++ b/android/app/src/main/res/layout/fragment_full_photo_view.xml
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="#cc4fc3f7" >
+            android:background="@color/backgroundDefault" >
 
             <ImageView
                 android:id="@+id/photo"
