--- a/android/app/src/main/res/layout/fragment_infoview.xml
+++ b/android/app/src/main/res/layout/fragment_infoview.xml
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="#cc4fc3f7" >
+            android:background="@color/backgroundDefault" >
 
             <TextView
                 android:id="@+id/info_title"
@@ -67,34 +67,34 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="16dp" />
 
-            <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal" >-->
 
-                <ImageView
-                    android:id="@+id/info_spvButton"
-                    android:gravity="start"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.80"
-                    android:src="@drawable/marker_white"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="16dp"/>
+                <!--<ImageView-->
+                    <!--android:id="@+id/info_spvButton"-->
+                    <!--android:gravity="start"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_weight="0.80"-->
+                    <!--android:src="@drawable/marker_white"-->
+                    <!--android:layout_marginTop="16dp"-->
+                    <!--android:layout_marginLeft="16dp"/>-->
 
-                <TextView
-                    android:id="@+id/info_spvText"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:gravity="start"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.20"
-                    android:text="@string/info_spvText"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="16dp" />
+                <!--<TextView-->
+                    <!--android:id="@+id/info_spvText"-->
+                    <!--android:textColor="@color/black"-->
+                    <!--android:textSize="14sp"-->
+                    <!--android:gravity="start"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_weight="0.20"-->
+                    <!--android:text="@string/info_spvText"-->
+                    <!--android:layout_marginTop="16dp"-->
+                    <!--android:layout_marginRight="16dp" />-->
 
-             </LinearLayout>
+             <!--</LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
