--- a/android/app/src/main/res/layout/single_photo_list_item.xml
+++ b/android/app/src/main/res/layout/single_photo_list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/dark_grey"
+    android:background="@color/darkGrey"
     android:orientation="horizontal"
     android:textColor="@color/white"
     android:padding="5dip" >
