--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
     </style>
 
     <style name="TextViewParent" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">@color/dark_grey</item>
+        <item name="android:textColor">@color/darkGrey</item>
         <item name="android:textStyle">bold</item>
         <item name="android:padding">3dip</item>
     </style>
